<resources>
    <string name="app_name">BakaReader EX</string>
    <string name="menu_settings">Settings</string>
    <string name="light_novels">Light Novels</string>
    <string name="watch_list">Watch List</string>
    <string name="originals">Originals List</string>
    <string name="alternative_language">Alt. Language</string>
    <string name="choose">Choose</string>
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="title_activity_display_light_novels">Light Novels</string>
    <string name="title_activity_display_settings">Settings</string>
    <string name="title_activity_light_novel_chapters">Light Novel Chapters</string>
    <string name="title_activity_display_alternative_novels">Alternative Language Novels</string>
    <string name="title_activity_display_alternative_novel_pager">Alternative Language Lists</string>
    <string name="novel_title">title</string>
    <string name="novel_cover">cover</string>
    <string name="novel_synopsys">dummy synopsis</string>
    <string name="title_activity_display_synopsys">Novel Synopsis</string>
    <string name="title_activity_display_novel_content">Novel Content</string>
    <string name="invert_colors">Invert Colors</string>
    <string name="title_activity_display_image">Image Viewer</string>
    <string name="novel_last_update">Last Update</string>
    <string name="novel_chapter">Novel Chapter</string>
    <string name="novel_chapter_dl">(DL)</string>
    <string name="list_empty">List is Empty, please manually Refresh from the overflow menu.</string>
    <string name="update_service_name">LNReader Update Service</string>
    <string name="tts_service_name">LNReader TTS Service</string>
    <string name="auto_backup_service_name">LNReader Auto Backup Service</string>
    <string name="hint_search">Search</string>
    <string name="teasers">Teaser List</string>
    <string name="search">Search</string>
    <string name="novel_only">Novel Only</string>
    <string name="task_loading">Task still loading&#8230;</string>
    <string name="jump_last_read">Resume Novel</string>
    <string name="title_activity_display_bookmark">Bookmarks</string>
    <string name="main_activity_menu">Main Menu</string>
    <string name="title_activity_download_list">Downloads List</string>
    <string name="downloadsList">Downloads</string>
    <string name="title_activity_download_list_adapter">Downloads List</string>
    <string name="title_activity_display_novel_pager">Light Novel Lists</string>
    <string name="title_activity_update_history">Update History</string>
    <string name="language_selection">Language Selection</string>
    <string name="current_value">Current Value</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_task">Cancel Task: </string>
    <string name="bakatsuki_message">Before using this application, keep in mind that we, the developers of BakaTsuki EX, are not responsible for the content displayed by the application in any way. Therefore, you must read and agree to the TLG Translation Common Agreement of Baka-Tsuki.org:\n\n</string>
    <string name="bakatsuki_copyrights">\nTLG Translation Common Agreement v.0.4.1
\n0) \"Wiki\" is defined as the site \"Baka\-Tsuki\" running on any variation of wiki-like content management package, as defined by The American Heritage® Dictionary of the English Language, Fourth Edition. Houghton Mifflin Company, 2004.
\na) \"Work\" is defined as any material from the product/service their respective copyright holders hold including, but not limited to, scripts(translated and original), dialogue, illustrations, screenshots, animation, clips, sound, etc. When the word \"translated\" is used before (a), (a) becomes \"translated and/or raw script\". b1) \"You\", \"your\" are defined as a copyright holder of the works as defined in (a) . b2) \"You\", \"your\" are defined as the submitter of the translated works as defined in (a) . b3) \"You\", \"your\" are defined as the viewer of the works as defined in (a) . b4) \"we\" is defined as the owner of this wiki AND the translators of the works as defined in (a) . c) \"I\", \"me\", \"my\" are defined as the owner of this wiki. d) \"licenced\" is defined as global and/or English publishing rights.
\nBy entering this wiki(0) you agree to the following conditions. If you do not agree with this agreement, portion and/or full, please leave this wiki(0) now.
\nSection A.1 All works(a), original and/or translated, belong to their respective copyright holders in their respective countries.
\nThis wiki(0) is done with the intention to A) Improve my(c) English writing skills. B) To provide a storage space for fans of the translated works(a) so that the fans can promote these works(a) C) To attract more readers to make English licensing(d) possible.
\nIf you(b1) feel your(b1) rights are being violated due to the usage of this wiki up to, but not limited by the presentation/broadcast/showing/distribution of works(a) in their original and/or translated full and/or portion of the work(a), please notify me(c) as soon as possible.
\nAll works(a) will be deleted without warning upon request by their copyright holders.
\n
\nSection A.2 Under no circumstances would the visitors of this wiki(0), the translators of the works(a), the owner of this wiki(c,0), or the owner of this server assume any responsibilities for any damages that may have been caused by this wiki(0). Furthermore, by agreeing to this agreement, you(b1) agree to the notion that while I(c) did everything I(c) could to honor the copyrights of the work(a), accident can happen.
\nSection B Under no circumstances would you(b2) 1. submit works(a) that are licenced(d) in the country the server and/or the submitter is located in. 2. submit translated works(a) copied directly from an unauthorized source such as, but not limited to, online, written sources etc. . If you(b2) submit works(a) that have been authorized by their rights holder, permission, in the form of written/electronic/printed must be available upon request. All translated works(a) rights are properties of their respective translators. By submitting translated works(a) to this wiki(0) you(b2) agree that All works(a) will be deleted without warning upon request by the copyright holders..
\nSection C Under no circumstances would you(b3) 1. take full and/or portion of the (translated) works(a) in this wiki(0) and use them(a) to engage in any commercial activities such as, but not limited to, rent, sell, print, auction, broadcast etc. 2. claim translated works(a) in this wiki(0) as your(b3) own products of translation unless you(b3) are qualified as defined in (b2).
\nSection D You(b3) agree with the notion that owner of this wiki(0), and all the submitters as defined in (b2), take no responsibility of any inappropriate material such as, but not limited to, pornography, violence, and offensive slurs. Furthermore, you(b3) agree with the notion that the owner of this wiki(0), and all the submitters as defined in (b2), by good wills try their best to moderate any material that may be suspected to be inappropriate in \"the owner of this wiki(0), and all the submitters as defined in (b2)\"\'s countries UNLESS such material is deemed necessary solely by the merit of preserving the integrity of such work(a). In this case, the consideration of integrity of such work(a) may take precedent before other considerations as mentioned previously in Section D.
\n
\nFinally, Have Fun! :D
\nthelastguardian \- May 26, 2008</string>
    <string name="content_refresh">Refresh Content</string>
    <string name="content_previous">Previous</string>
    <string name="content_next">Next</string>
    <string name="content_toc">Jump To</string>
    <string name="content_search">Search</string>
    <string name="content_bookmark">Bookmarks on Chapter</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="download_list">Download List</string>
    <string name="details_refresh">Refresh Chapter List</string>
    <string name="details_download_all">Download All Chapters</string>
    <string name="novel_list_refresh">Refresh Novel List</string>
    <string name="novel_list_manual_add">Manual Add</string>
    <string name="novel_list_download_all">Download All Info</string>
    <string name="update_interval_summary">Define how often updates will be verified: %1$s</string>
    <string name="update_interval_title">Updates interval</string>
    <string name="selected_mode">Selected mode: %1$s</string>
    <string name="selected_language">Selected language: %1$s.\nRestart application for maximum results.</string>
    <string name="last_run">Last Run: %1$s\nStatus: %2$s</string>
    <string name="none">None</string>
    <string name="unknown">Unknown</string>
    <string name="download_image_to">Downloaded images saved to: %1$s</string>
    <string name="novel_database_to">Novel Database saved to: %1$s</string>
    <string name="copyright">Baka-Tsuki:Copyrights</string>
    <string name="not_copyright">Cannot get copyright page.</string>
    <string name="run_update_text">Update Now!</string>
    <string name="use_sound_summary">Ring if there is new chapters update.</string>
    <string name="use_sound_title">Use Ringer</string>
    <string name="use_vibration_summary">Vibrate if there is new chapters update.</string>
    <string name="use_vibration_title">Use Vibration</string>
    <string name="persist_notification_summary">Keep the update notification after click.</string>
    <string name="persist_notification_title">Persist Notifications</string>
    <string name="consolidate_notification_summary">Consolidate the notification into single notification which launch Update History.</string>
    <string name="consolidate_notification_title">Consolidate Notification</string>
    <string name="general_preference">General</string>
    <string name="UI_selection_title">UI Selection</string>
    <string name="invert_color_summary">Changes the font color with the background color</string>
    <string name="invert_color_title">Invert Colors</string>
    <string name="lock_horizontal_summary">Enters horizontal orientation and locks the orientation</string>
    <string name="lock_horizontal_title">Lock for Horizontal</string>
    <string name="auto_download_chapter_summary">Automatically adds a chapter to the download list when touched, if it hasn\'t been downloaded yet.</string>
    <string name="auto_download_chapter_title">Touch for Download</string>
    <string name="alphabet_order_summary">Novel list is always ordered by alphabet.</string>
    <string name="alphabet_order_title">Alphabetical Order</string>
    <string name="show_missing_summary">Show missing chapter (marked with red color).</string>
    <string name="show_missing_title">Show Missing Chapters</string>
    <string name="show_external_summary">Show external chapter (marked with blue color icon).</string>
    <string name="show_external_title">Show External Chapters</string>
    <string name="use_internal_webview_summary">Handle external link with internally, rather than using browser.</string>
    <string name="updates">Updates</string>
    <string name="refresh_image">Refresh Image</string>
    <string name="menu_show_updated">Show Updated</string>
    <string name="menu_show_new">Show New</string>
    <string name="menu_show_deleted">Show Deleted</string>
    <string name="menu_show_clear_all">Clear All</string>
    <string name="menu_show_clear_selected">Clear Selected</string>
    <string name="menu_show_downloaded">Show Downloaded</string>
    <string name="menu_show_everything_else">Show Everything Else</string>
    <string name="menu_save_external">Save External Page</string>
    <string name="menu_show_external">Show External</string>
    <string name="novel_status_volumes">Status, Volumes</string>
</resources>