<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item android:id="@+id/menu_clear_all" android:title="@string/menu_show_clear_all"></item>
    <item android:id="@+id/menu_clear_selected" android:title="@string/menu_show_clear_selected"></item>
    <item android:id="@+id/menu_show_new" android:checkable="true" android:checked="true" android:title="@string/menu_show_new"></item>
	<item android:id="@+id/menu_show_updated" android:checkable="true" android:checked="true" android:title="@string/menu_show_updated"></item>
    <item android:id="@+id/menu_show_deleted" android:checkable="true" android:checked="true" android:title="@string/menu_show_deleted"></item>
    <item android:id="@+id/menu_show_external" android:title="@string/menu_show_external" android:checkable="true" android:checked="true"></item><item android:id="@+id/menu_run_update" android:title="@string/run_update_text" android:showAsAction="ifRoom|withText"></item>
    

</menu>