<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings" />
    <item android:id="@+id/menu_refresh_novel_list"
        android:orderInCategory="3" 
        android:title="@string/novel_list_refresh" />
    <item android:id="@+id/invert_colors"
        android:orderInCategory="97"
        android:title="@string/invert_colors" />
    <item android:id="@+id/menu_bookmarks"
        android:orderInCategory="98"
        android:title="@string/bookmarks" />
    <item android:id="@+id/menu_downloads_list"
        android:orderInCategory="99"
        android:title="@string/download_list" />
    <item android:id="@+id/menu_manual_add"
        android:orderInCategory="2" 
        android:title="@string/novel_list_manual_add"></item>
    <item android:id="@+id/menu_download_all_info"
        android:orderInCategory="1" 
        android:title="@string/novel_list_download_all"></item>
</menu>
