<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_clear_all"
        android:title="@string/menu_show_clear_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_clear_selected"
        android:title="@string/menu_show_clear_selected" />
    <item
        android:id="@+id/menu_show_new"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_show_new" />
    <item
        android:id="@+id/menu_show_updated"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_show_updated" />
    <item
        android:id="@+id/menu_show_deleted"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_show_deleted" />
    <item
        android:id="@+id/menu_show_external"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_show_external" />
    <item
        android:id="@+id/menu_run_update"
        app:showAsAction="ifRoom|withText"
        android:title="@string/run_update_text" />

</menu>