<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_chapter_previous"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/content_previous"/>
    <item
        android:id="@+id/menu_chapter_next"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/content_next"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_downloads_list"
        android:orderInCategory="99"
        android:title="@string/download_list" />
    <item android:id="@+id/menu_refresh_image" 
        android:orderInCategory="98"
        android:title="@string/refresh_image" android:showAsAction="ifRoom"></item>
</menu>
