<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_clear_all"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:title="@string/menu_show_clear_all" />
    <item
        android:id="@+id/menu_clear_selected"
        android:title="@string/menu_show_clear_selected" />
    <item
        android:id="@+id/menu_show_downloaded"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_downloaded"
        android:title="@string/menu_show_downloaded" />
    <item
        android:id="@+id/menu_show_everything_else"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_show_everything_else" />

</menu>
