<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appCompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_item"
        android:orderInCategory="1"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        appCompat:showAsAction="always"
        appCompat:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_refresh_novel_list"
        android:orderInCategory="3"
        android:icon="@drawable/ic_main_updates"
        app:showAsAction="ifRoom"
        android:title="@string/novel_list_refresh" />
    <item
        android:id="@+id/menu_manual_add"
        android:orderInCategory="2"
        android:title="@string/novel_list_manual_add"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/menu_download_all_info"-->
        <!--android:orderInCategory="1"-->
        <!--android:title="@string/novel_list_download_all"-->
        <!--app:showAsAction="ifRoom" />-->
</menu>
