<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingRight="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/novel_cover"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:srcCompat="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/novel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novel_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/novel_status_volumes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novel_status_volumes" />

        <TextView
            android:id="@+id/novel_last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novel_last_update" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/novel_is_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@android:drawable/btn_star"
        android:checked="false"
        android:focusable="false"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

</LinearLayout>