<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
	android:background="?android:attr/windowBackground"
    android:layout_gravity="center" >

    <LinearLayout 
        android:id="@+id/menu_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
	        android:id="@+id/menu_left"
            android:layout_weight="14"
            android:layout_gravity="center_vertical"
            android:layout_width="fill_parent"
	      	android:layout_marginLeft="25dp"
	      	android:layout_marginTop="50dp"
	      	android:layout_marginBottom="50dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <Button
	            android:id="@+id/btnLightNovel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
	            android:layout_marginTop="10dp"
	            android:minHeight="66dp"
	            android:minWidth="165dp"
	            android:background="@drawable/button_states"	            
	            android:textStyle="bold"
	            android:textSize="20sp"
	            android:clickable="true"
	            android:focusable="true"
	            android:text="@string/light_novels" />
	
   	        <Button
   	            android:id="@+id/btnWatchList"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
	            android:layout_marginTop="35dp"
   	            android:minHeight="66dp"
   	            android:minWidth="165dp"
	            android:background="@drawable/button_states"	            
	            android:textStyle="bold"
	            android:textSize="20sp"
	            android:clickable="true"
	            android:focusable="true"
	            android:text="@string/watch_list" />
	            
	        <Button
	            android:id="@+id/btnResumeNovel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
	            android:layout_marginTop="35dp"
	            android:minHeight="66dp"
	            android:minWidth="165dp"
	            android:background="@drawable/button_states"	            
	            android:textStyle="bold"
	            android:textSize="20sp"
	            android:clickable="true"
	            android:focusable="true"
   	            android:text="@string/jump_last_read" />	  
   	            
	        <Button
	            android:id="@+id/btnAltLanguage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
	            android:layout_marginTop="35dp"
	            android:layout_marginBottom="30dp"
	            android:minHeight="66dp"
	            android:minWidth="165dp"
	            android:background="@drawable/button_states"	            
	            android:textStyle="bold"
	            android:textSize="20sp"
	            android:clickable="true"
	            android:focusable="true"
                android:text="@string/alternative_language" />

        </LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Report Issue"
			android:layout_gravity="right"
			android:layout_marginRight="20dp"
			android:clickable="true"
			android:focusable="true"
			android:id="@+id/report_issue" />

    </LinearLayout>

</ScrollView>