<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/novel_synopsis_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/empttListProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emptyList"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/list_empty"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:paddingRight="25dp"
            android:text="@string/novel_title"
            android:textStyle="bold"
            tools:context=".LightNovelChaptersActivity" />

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/divider"
            android:paddingBottom="25dp" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_bottom"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/novel_cover" />

        <View
            android:id="@+id/divider_bottom2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/cover"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@color/divider"
            android:paddingBottom="25dp" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider_bottom2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/novel_synopsys" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/synopsis"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:text="categories" />

        <View
            android:id="@+id/divider_bottom3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/categories"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/divider"
            android:paddingBottom="25dp" />

        <CheckBox
            android:id="@+id/isWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/title"
            android:layout_alignBottom="@+id/title"
            android:layout_alignParentRight="true"
            android:button="@android:drawable/btn_star" />
    </RelativeLayout>

</ScrollView>